--- a/news/2016-05-18-releases.mdwn
+++ b/news/2016-05-18-releases.mdwn
@@ -103,22 +103,22 @@ We're pleased to announce new releases!
 
         Version 1.7 (2016-05-18)
         
-        * MIG now has a test suite.  It includes a set of valid and invalid
-          definition files that MIG will try to process.  For valid
-          definitions, GCC will compile the stubs to check if valid C code was
-          generated.
+        MIG now has a test suite.  It includes a set of valid and invalid
+        definition files that MIG will try to process.  For valid
+        definitions, GCC will compile the stubs to check if valid C code was
+        generated.
         
-        * The generated code uses integer types from <stdint.h> now instead of
-          the old Mach types.
+        The generated code uses integer types from <stdint.h> now instead of
+        the old Mach types.
         
-        * Code that was hard-coding the word size has been identified and
-          fixed.
+        Code that was hard-coding the word size has been identified and
+        fixed.
         
-        * Support for the obsolete kinds of RPC routines 'functions',
-          'procedures', and 'simple procedures' has been removed.
+        Support for the obsolete kinds of RPC routines 'functions',
+        'procedures', and 'simple procedures' has been removed.
         
-        * MIG now emits code that casts objects translated from capabilities
-          to the correct C type.
+        MIG now emits code that casts objects translated from capabilities
+        to the correct C type.
 
     Release tarballs may be downloaded from <ftp://ftp.gnu.org/gnu/mig/>,
     <http://ftp.gnu.org/gnu/mig/>, or checked out of Git,
