--- a/history.mdwn
+++ b/history.mdwn
@@ -118,6 +118,8 @@ mailing lists.
     released|news/2015-10-31-releases]] (2015-10-31)
   * [[GNU Hurd 0.8, GNU Mach 1.7, GNU MIG 1.7
     released|news/2016-05-18-releases]] (2016-05-18)
+  * [[GNU Hurd 0.9, GNU Mach 1.8, GNU MIG 1.8
+    released|news/2016-12-18-releases]] (2016-12-18)
 
 
 # An Incomplete GNU Hurd Timeline
@@ -177,4 +179,5 @@ mailing lists.
     2015|news/2015-04-29-debian_gnu_hurd_2015]], [[GNU Hurd 0.7, GNU Mach 1.6,
     GNU MIG 1.6 released|news/2015-10-31-releases]], [...].
   * 2016: [...], [[GNU Hurd 0.8, GNU Mach 1.7, GNU MIG 1.7
-    released|news/2016-05-18-releases]].
+    released|news/2016-05-18-releases]], [...], [[GNU Hurd 0.9, GNU Mach 1.8,
+    GNU MIG 1.8 released|news/2016-12-18-releases]].
