added link to free online course and free textbook

--- a/documentation.mdwn
+++ b/documentation.mdwn
@@ -25,8 +25,8 @@ architecture.  Yes, really.
 
 ## Operating Systems Basics
 
-Books.  Etc.
-
+You can find good free, self-paced online courses about operating systems on <https://www.udacity.com/> .
+A free textbook about operating systems is called [Operating Systems: Three Easy Pieces](http://pages.cs.wisc.edu/~remzi/OSTEP/).
 
 ## GNU/Hurd System Architecture
 
