--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -36,6 +36,7 @@ This page lists the few packages whose build makes the Debian buildd box crash a
 * ext2fs gets stuck
 
   * emacs24
+  * emacs25
 
 * loops and eats memory
 
