Update gsoc ideas

--- a/community/gsoc/project_ideas/tcp_ip_stack.mdwn
+++ b/community/gsoc/project_ideas/tcp_ip_stack.mdwn
@@ -34,7 +34,7 @@ make such a split later on feasible.
 
 This is [[!GNU_Savannah_task 5469]].
 
-Possible mentors: zhengda
+Possible mentors: youpi
 
 Exercise: You could try making some improvement to the existing pfinet
 implementation; or you could work towards running some existing userspace
