--- a/hurd/running/gnu.mdwn
+++ b/hurd/running/gnu.mdwn
@@ -1,1 +1,20 @@
-//
+# <a name="The_GNU_Operating_System"> </a> The GNU Operating System
+
+The GNU Operating System, or GNU System as it is more commonly known, will be a
+complete [[Unix]]-like operating system composed entirely of [free
+software](http://www.gnu.org/philosophy/free-sw.html).  The creation of the GNU
+System is one of the goals of the [GNU Project](http://www.gnu.org/), which was
+[launched in 1983](http://www.gnu.org/gnu/initial-announcement.html) by
+[Richard Stallman](http://www.stallman.org/).
+
+
+## Resources
+
+  * [[mailing_lists/gnu-system-discuss]] mailing list
+
+
+## Download
+
+  * Extended GNU distribution <http://i-hug.sarovar.org/downloads/GNU/extended/>
+
+    As of 2013-01, the latest image provided there is from 2006.
