Update project with presentation and exercise.

--- a/community/gsoc/project_ideas/virtualization.mdwn
+++ b/community/gsoc/project_ideas/virtualization.mdwn
@@ -76,9 +76,7 @@ solutions would be very helpful.
 
 Possible mentors: Justus Winter (teythoon)
 
----
+See also: [[https://fosdem.org/2017/schedule/event/microkernel_virtualization_on_hurd/]]
 
-
-# 2016-02-14, Justus Winter
-
-I have a unprivileged-subhurds prototype that "just" needs finishing.
+Exercise: Currently, when issuing 'reboot' in Subhurds, 'boot' exits.
+Make it reboot the Subhurd instead.
