Add anchor so that we can link to the small hacks list.

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -83,6 +83,7 @@ For more reading resources, please see these web pages, for example,
 documents.
 
 
+<a name="smallhacks"></a>
 ## Small hack entries
 
 Here is a list of small hacks, which can serve as entries into the Hurd code for
