Add a Wiki hack.

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -90,6 +90,7 @@ Here is a list of small hacks, which can serve as entries into the Hurd code for
 people who would like to dive into the code but just lack a "somewhere to begin
 with".
 
+* Create a Wiki page with all presentations about the Hurd.  Many are referenced here in the Wiki, but they are not easy to find.
 * Add `UTIME_NOW` and `UTIME_OMIT`.  It is a matter of taking the BSD values, add the `#define`s to the proper header, and implement the support in `*_S_file_utimes` functions. Flávio Cruz has submitted a patch, now being polished.
     See also [[!debbug 762677]].
 * Some translators do not support [[hurd/fsysopts]], i.e. support for the
