--- a/documentation.mdwn
+++ b/documentation.mdwn
@@ -47,7 +47,7 @@ text="*[[shapiro\_capintro\_1999|capability]]*:
     port|microkernel/mach/port]].
 
   * {{$capability#wikipedia_object-capability_model}}.  Albeit not directly
-    tailored at the GNU/Hurd operating system architecture, this artice anyway
+    tailored at the GNU/Hurd operating system architecture, this article anyway
     does a good job at describing general principles of a [[capability]]-based
     system architecture.
 
