notes about cross-building glibc easily

--- a/hurd/glibc.mdwn
+++ b/hurd/glibc.mdwn
@@ -17,3 +17,19 @@ For information about how the glibc integrates into the system, see sections
 [[Hurd-specific_API]].
 
 [[Debugging_glibc|debugging/glibc]].
+
+## Cross-building glibc from Linux.
+
+The long-term goal is to get build-many-glibcs.py to be able to cross-compile
+glibc. This should be working as per the following:
+
+   mkdir -p /tmp/build/src
+   cp -a /usr/src/glibc /tmp/build/src/
+   unset CFLAGS
+   /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build checkout binutils-2.29 gcc-7.1.0
+   /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build host-libraries
+   /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build compilers i686-gnu
+   /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build glibcs i686-gnu
+
+Ideally the master branch builds that way. As of January 2018 the goal is first
+to get the sthibaul/hurd-builds branch building.
