* community/gsoc/project_ideas/tcp_ip_stack.mdwn
I mentioned that lwip was recently ported to the hurd.

--- a/community/gsoc/project_ideas/tcp_ip_stack.mdwn
+++ b/community/gsoc/project_ideas/tcp_ip_stack.mdwn
@@ -13,7 +13,14 @@ is included in the section entitled
 
 The Hurd presently uses a [[TCP/IP_stack|hurd/translator/pfinet]] based on code from an old Linux version.
 This works, but lacks some rather important features (like PPP/PPPoE), and the
-design is not hurdish at all.
+design is not hurdish at all.  Recently lwip, which is an userspace tcp/ip library,
+was ported to the Hurd.  If you are only using an ethernet connection, then it is possible to use
+lwip as a complete replacement for pfinet.  However, lwip uses the netdde device
+drivers for wireless chips, which are old drivers from an old version of linux. To use
+lwip for a wifi connection on more modern hardware, one would also need modern
+device drivers to access the internet.  The promising approach to this is using
+a rump kernel.  This is essentially the New Driver Framework google summer of
+code project idea.
 
 A true hurdish network stack will use a set of [[hurd/translator]] processes,
 each implementing a different protocol layer. This way not only the
