Further clean up list of Google Summer of Code project ideas

--- a/community/gsoc/project_ideas/debian_installer.mdwn
+++ b/community/gsoc/project_ideas/debian_installer.mdwn
@@ -10,10 +10,13 @@ is included in the section entitled
 
 [[!meta title="Port the Debian Installer to the Hurd"]]
 
-[!] Jérémie Koenig has been working on this as a [[Google Summer of Code
-2010|2010]] project.
+[[!template id=highlight text="""/!\ Obsolete /!\
 
 ---
+
+Jérémie Koenig has been working on this as a [[Google Summer of Code
+2010|2010]] project."""]]
+
 
 The primary means of distributing the Hurd is through Debian GNU/Hurd.
 However, the installation CDs presently use an ancient, non-native installer.
