--- a/community/gsoc/project_ideas/gccgo.mdwn
+++ b/community/gsoc/project_ideas/gccgo.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2011, 2012 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2011, 2012, 2018 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -9,6 +10,14 @@ is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
 [[!meta title="Porting Google Go (GCC: gccgo)"]]
+
+[[!template id=highlight text="""/!\ Obsolete /!\
+
+---
+
+This is no longer valid as a Google Summer of Code project; existing work needs
+to be integrated first."""]]
+
 
 The goal of this project is to make the [Google Go programming
 language](http://golang.org/) available on GNU/Hurd in its [[GCC]] *gccgo*
