--- a/community/gsoc/project_ideas/gdb.mdwn
+++ b/community/gsoc/project_ideas/gdb.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2013, 2018 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -11,6 +11,14 @@ License|/fdl]]."]]"""]]
 [[!meta title="Improve the GDB Port for GNU Hurd"]]
 
 [[!tag open_issue_gdb]]
+
+[[!template id=highlight text="""/!\ Obsolete /!\
+
+---
+
+This is no longer valid as a Google Summer of Code project; existing work needs
+to be integrated first."""]]
+
 
 [[/GDB]] is available and working on GNU Hurd.  However, there are some bugs
 and there is missing functionality compared to a port targeting the Linux
