--- a/community/gsoc/project_ideas/libgtop.mdwn
+++ b/community/gsoc/project_ideas/libgtop.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2009, 2010, 2012 Free Software Foundation,
+[[!meta copyright="Copyright © 2009, 2010, 2012, 2018 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -11,9 +11,12 @@ is included in the section entitled
 
 [[!meta title="Porting libgtop"]]
 
-/!\ On 2012-05-05 Andjos reported (commit
-web.git:8061106f2d1f15fa9a54947bc45d4cba68d89bba) that this task has already
-been completed.
+[[!template id=highlight text="""/!\ Obsolete /!\
+
+---
+
+This is no longer valid as a Google Summer of Code project; it's done."""]]
+
 
 libgtop is a library used by many applications (especially GNOME applications)
 to abstract the system-specific methods for obtaining information about the
@@ -33,7 +36,3 @@ This task doesn't require any specific previous knowledge (besides of general
 C/UNIX programming skills of course); but during the course of the project,
 some knowledge about Hurd internals will have to be obtained, along with a bit
 of Debian stuff.
-
-Possible mentors: Samuel Thibault (youpi)
-
-Exercise: Fix one of the shortcomings in the existing procfs implementation.
