--- a/community/gsoc/project_ideas/object_lookups.mdwn
+++ b/community/gsoc/project_ideas/object_lookups.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2013, 2014, 2016 Free Software Foundation,
+[[!meta copyright="Copyright © 2013, 2014, 2016, 2018 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -10,6 +10,13 @@ is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
 [[!meta title="Improved System Object Lookups"]]
+
+[[!template id=highlight text="""/!\ Obsolete /!\
+
+---
+
+This is no longer valid as a Google Summer of Code project."""]]
+
 
 The Hurd currently uses its ihash library ([[hurd/libihash]]) as a generic
 container for various objects. While it does its job, it has been reported
