--- a/community/gsoc/project_ideas/tmpfs.mdwn
+++ b/community/gsoc/project_ideas/tmpfs.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2008, 2009, 2012 Free Software Foundation,
+[[!meta copyright="Copyright © 2008, 2009, 2012, 2018 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -11,10 +11,14 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="Fix tmpfs"]]
 
-[!] [[Maksym_Planeta]] has been making good progress here; status is tracked at
-[[here|hurd/translator/tmpfs/discussion]].
+[[!template id=highlight text="""/!\ Obsolete /!\
 
 ---
+
+This is no longer valid as a Google Summer of Code project.
+[[Maksym_Planeta]] has been making good progress here; status is tracked at
+[[here|hurd/translator/tmpfs/discussion]]."""]]
+
 
 In some situations it is desirable to have a file system that is not backed by
 actual disk storage, but only by anonymous memory, i.e. lives in the RAM (and
