--- a/community/gsoc/project_ideas/namespace-based_translator_selection.mdwn
+++ b/community/gsoc/project_ideas/namespace-based_translator_selection.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2008, 2009, 2012 Free Software Foundation,
+[[!meta copyright="Copyright © 2008, 2009, 2012, 2018 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -11,11 +11,15 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="Namespace-based Translator Selection"]]
 
-[!] [[Sergiu Ivanov|scolobb]] has been working *voluntarily* on this task an
-inofficial GSoC 2008 participant.  Not all the desired functionality is in
-place yet, though.
+[[!template id=highlight text="""/!\ Obsolete? /!\
 
 ---
+
+This is probably no longer valid as a Google Summer of Code project.
+[[Sergiu Ivanov|scolobb]] has been working *voluntarily* on this task an
+inofficial GSoC 2008 participant.  Not all the desired functionality is in
+place yet, though, but the status needs to be evaluated."""]]
+
 
 The main idea behind the Hurd is to make (almost) all system functionality
 user-modifiable ([[extensible_system|extensibility]]).  This includes a
