--- a/community/gsoc/project_ideas/procfs.mdwn
+++ b/community/gsoc/project_ideas/procfs.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2008, 2009, 2011, 2012 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2008, 2009, 2011, 2012, 2018 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -11,14 +11,17 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="procfs"]]
 
-[!] Madhusudan.C.S has implemented a new, fully functional
-[[procfs|madhusudancs]] as a [[GSoC 2008 project|2008]].
-
-[!] This was not the end of the story: [[jkoenig's
-`procfs`|hurd/translator/procfs]] is yet another re-written and
-improved version.
+[[!template id=highlight text="""/!\ Obsolete /!\
 
 ---
+
+This is no longer valid as a Google Summer of Code project.
+Madhusudan.C.S has implemented a new, fully functional
+[[procfs|madhusudancs]] as a [[GSoC 2008 project|2008]].
+This was not the end of the story: [[jkoenig's
+`procfs`|hurd/translator/procfs]] is yet another re-written and
+improved version."""]]
+
 
 Although there is no standard (POSIX or other) for the layout of the `/proc`
 pseudo-filesystem, it turned out a very useful facility in GNU/Linux and other
