The "new" Gmane no longer provides Message-Id lookup
..., so switch to "The Mail Archive",
<https://www.mail-archive.com/faq.html#msgid>.

--- a/open_issues/notmuch_n_gmane.mdwn
+++ b/open_issues/notmuch_n_gmane.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2011 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2011, 2018 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -8,7 +8,7 @@ Sections, no Front-Cover Texts, and no Back-Cover Texts.  A copy of the license
 is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
-[[!meta title="Notmuch'n'Gmane"]]
+[[!meta title="Message-Id: Underscores"]]
 
 [[!taglink open_issue_documentation]]; [[ikiwiki]] issue.
 
