--- a/shortcuts.mdwn
+++ b/shortcuts.mdwn
@@ -105,9 +105,9 @@ ikiwiki will include your shortcut in the standard underlay.
     desc="hurd/hurd.git commit %s"]]
 
 
-## Notmuch'n'Gmane.
+## Message-Id
 
-  * [[!shortcut name=message-id url="http://news.gmane.org/find-root.php?message_id=%3c%s%3e" desc="""`id:"%s"`"""]]
+  * [[!shortcut name=message-id url="http://mid.mail-archive.com/%s" desc="""`id:"%s"`"""]]
 
 
 ## sourceware
