--- a/hurd/running/debian/porting.mdwn
+++ b/hurd/running/debian/porting.mdwn
@@ -17,7 +17,7 @@ More than half of the Debian archive has been compiled successfully on the
 Hurd, however, many programs fail to build for various reasons.
 
 A [list of build failures including error
-messages](http://unstable.buildd.net/buildd/hurd-i386_Failed.html) can be
+messages](https://people.debian.org/~sthibault/failed_packages.txt) can be
 found, as well as a [preliminary
 analysis](http://lists.debian.org/debian-hurd/2007/07/msg00000.html) of them and [solutions](http://lists.debian.org/debian-hurd/2007/07/msg00001.html), and some more details in [[hurd/porting/guidelines]]. [Graphs and statistics](http://people.debian.org/~sthibault/) about the consequence in terms of build dependencies are available.
 
