Update qemu image URLs

--- a/hurd/running/debian/qemu_image.mdwn
+++ b/hurd/running/debian/qemu_image.mdwn
@@ -10,20 +10,20 @@ is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
 There is a QEMU image with [[Debian GNU/Hurd|debian]] pre-installed available
-as <http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.tar.gz>.
+as <https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img.tar.gz>.
 
 Usage:
 
-    $ wget http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.tar.gz
+    $ wget https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img.tar.gz
     $ tar -xz < debian-hurd.img.tar.gz
     $ kvm -m 1G -drive cache=writeback,file=$(echo debian-hurd-*.img)
 
-Please also read the README file: <http://people.debian.org/~sthibault/hurd-i386/README>
+Please also read the README file: <https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/README>
 
 If you have troubles extracting the image, you can use
-the gz version <http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.gz>,
-the zip version <http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.zip>,
-or even the plain version <http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img> (3GiB!)
+the gz version <https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img.gz>,
+the zip version <https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img.zip>,
+or even the plain version <https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img> (5GiB!)
 
 See the discussion about [[hurd/running/qemu/writeback_caching]].
 
