--- a/hurd/subhurd.mdwn
+++ b/hurd/subhurd.mdwn
@@ -30,10 +30,10 @@ requires a privileged subhurd.
 ## Quick hack: Use an existing image
 
 You can download a Debian/Hurd image
-[[here|https://people.debian.org/~sthibault/hurd-i386/]] and directly
+[[here|https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/]] and directly
 boot it:
 
-    $ wget --no-check-certificate https://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.gz
+    $ wget --no-check-certificate https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img.gz
     $ gunzip debian-hurd.img.gz
     $ boot --kernel-command-line="fastboot root=pseudo-root" -T typed part:1:file:debian-hurd.img
 
