--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -178,7 +178,7 @@ I'll have to think about it some more.
 ([[!taglink open_issue_documentation]])
 
 * Install qemu-kvm via your distros packages.
-* Download the [qemu image](http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.tar.gz): `wget http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.tar.gz`
+* Download the [qemu image](https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img.tar.gz): `wget https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img.tar.gz`
 * Unpack it: `tar xf debian-hurd.img.tar.gz`
 * Run it: `kvm -m 512 -drive cache=writeback,file=debian-hurd.img -redir tcp:2222::22` # Optionally use `--curses` to keep your keyboard layout. If need be modprobe kvm_amd, kvm intel and kvm to get kvm support (which is much, much faster). See also: [kvm FAQ](http://www.linux-kvm.org/page/FAQ).
 * login as root
