--- a/hurd/running/cloud.mdwn
+++ b/hurd/running/cloud.mdwn
@@ -15,4 +15,4 @@ It is possible to run the Hurd as a KVM-based OpenStack cloud instance.
 [[For the time being|open_issues/virtio]], you'll have to avoid using virtio
 drivers, and use emulated hardware instead:
 
-    $ glance image-create --property hw_disk_bus=ide --property hw_cdrom_bus=ide --property hw_vif_model=rtl8139 --disk-format raw  --container-format bare --name gnu-hurd --copy-from http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img
+    $ glance image-create --property hw_disk_bus=ide --property hw_cdrom_bus=ide --property hw_vif_model=rtl8139 --disk-format raw  --container-format bare --name gnu-hurd --copy-from https://cdimage.debian.org/cdimage/ports/latest/hurd-i386/debian-hurd.img
