Document the remaining issues

--- a/hurd/glibc.mdwn
+++ b/hurd/glibc.mdwn
@@ -32,5 +32,10 @@ glibc. This should be working as per the following:
     $ /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build compilers i686-gnu
     $ /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build glibcs i686-gnu
 
-Ideally the master branch builds that way. As of January 2018 the goal is first
-to get the sthibaul/hurd-builds branch building.
+Currently the master branch builds that way, it only has a few testsuite failures:
+
+    # Some PLTs are remaining
+    ./elf/check-localplt.test-result:FAIL: elf/check-localplt
+
+    # We do use nested functions which require trampolines in ld.so, libc.so, and libpthread.so
+    ./elf/check-execstack.test-result:FAIL: elf/check-execstack
