execstack issue was xfailed

--- a/hurd/glibc.mdwn
+++ b/hurd/glibc.mdwn
@@ -32,7 +32,4 @@ glibc. This should be working as per the following:
     $ /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build compilers i686-gnu
     $ /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build glibcs i686-gnu
 
-Currently the master branch builds that way, it only has a few testsuite failures:
-
-    # We do use nested functions which require trampolines in ld.so, libc.so, and libpthread.so
-    ./elf/check-execstack.test-result:FAIL: elf/check-execstack
+Currently the master branch builds that way without any testsuite issue.
