Document how to build upstream glibc

--- a/hurd/glibc.mdwn
+++ b/hurd/glibc.mdwn
@@ -33,3 +33,23 @@ glibc. This should be working as per the following:
     $ /tmp/build/src/glibc/scripts/build-many-glibcs.py /tmp/build glibcs i686-gnu
 
 Currently the master branch builds that way without any testsuite issue.
+
+# Building
+
+One of the tests really put boxes on its knees:
+
+    $ echo "tests-unsupported += test-lfs" >> sysdeps/mach/hurd/i386/Makefile
+
+One can build libc this way:
+
+    $ mkdir build
+    $ cd build
+    $ unset CFLAGS
+    $ ../configure --prefix=/usr
+    $ make
+    $ make -C ../iconvdata objdir=$PWD subdir=iconvdata ..=../ $PWD/iconvdata/gconv-modules
+    $ make check -k
+
+One can run tests with the new libc by hand:
+
+    $ ./testrun.sh ~/test
